--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         </activity>
         <service
             android:name=".listener.KangDroidNotificationListener"
-            android:label="My Notification Listener"
+            android:label="@string/kdr_notification_service"
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
             <intent-filter>
                 <action android:name="android.service.notification.NotificationListenerService" />
