--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-alpha01'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0-beta-2'
 }
